# commandpost

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LAUNCH-CHECKLIST.md  LICENSE  README.md  config.example.json  projects.example.json  pyproject.toml  run_commandpost.sh  start_watcher.sh  stop_watcher.sh  watcher.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
